--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@
     align-items: center;
     color: #fff;
     font-size: .8rem;
+    justify-content: space-between;
 }
+
 
 .tw-followCard-header {
     display: flex;
@@ -32,4 +34,21 @@
     border-radius: 999px;
     padding: 6px 16px;
     font-weight: bold;
+    cursor: pointer;
+    border: 1px solid #000;
+    transition: .3s ease background-color ;
+
+    
+}
+
+.tw-followCard-button.is-following {
+    border:1px solid red;
+}
+
+.tw-followCard-button.is-following:hover {
+    background: red;
+}
+
+.tw-followCard-button:hover {
+    background-color: #09f;
 }
